<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f1f1f4"
        android:orientation="vertical">



       <android.support.v4.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:background="@color/color_ffffff"
                   android:paddingTop="20dp"
                   android:paddingBottom="10dp"
                   android:orientation="vertical">


                   <TextView
                       style="@style/my_trips_text_style"
                       android:text="@string/select_recharge_amount"
                       android:paddingLeft="15sp"
                       android:textSize="15sp" />



                   <com.cai.framework.widget.XCFlowLayout
                       android:id="@+id/xcfAmountLayout"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="10dp"
                       android:gravity="center"/>


               </LinearLayout>


               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:background="@color/color_ffffff"
                   android:paddingTop="20dp"
                   android:paddingBottom="20dp"
                   android:layout_marginTop="5dp"
                   android:orientation="vertical">


                   <TextView
                       style="@style/my_trips_text_style"
                       android:text="@string/select_recharge_mode"
                       android:paddingLeft="15sp"
                       android:textSize="15sp" />


                  <LinearLayout
                      android:id="@+id/llRechargeModeLayout"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"/>

               </LinearLayout>

               <TextView
                   style="@style/reg_log_agree_service"
                   android:layout_width="match_parent"
                   android:gravity="center"
                   android:layout_marginTop="15dp"
                   android:textSize="15sp"
                   android:text="@string/click_agree" />

               <TextView
                   android:id="@+id/tvRechargeAgreement"
                   style="@style/reg_log_agree_service"
                   android:layout_width="match_parent"
                   android:gravity="center"
                   android:textSize="15sp"
                   android:text="@string/recharge_agreement"
                   android:textColor="@color/color_main" />
           </LinearLayout>
       </android.support.v4.widget.NestedScrollView>


        <Button
            android:id="@+id/btnEcharge"
            style="@style/button_style"
            android:layout_margin="0dp"
            android:background="@drawable/button_rectangle_bg"
            android:enabled="true"
            android:gravity="center"
            android:text="@string/echarge"
            android:textAllCaps="true" />


    </LinearLayout>
</layout>