<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f1f1f4"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:gravity="center_vertical"
            android:background="@color/color_ffffff"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/color_333333"
                android:gravity="center_vertical"
                android:text="@string/the_current_location"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/color_333333"
                android:drawableLeft="@drawable/positioning"
                android:drawablePadding="7dp"
                android:gravity="center_vertical"
                android:text="@string/city"/>

        </LinearLayout>






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="13dp"
            android:textColor="@color/color_c6c6c6"
            android:gravity="center_vertical"
            android:text="@string/manually_selected_area"/>



        <com.cai.pullrefresh.PtrRecyclerViewFrameLayout
            android:id="@+id/ptyRecycle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <!--<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_f1f1f4">



            <com.cai.framework.baseview.LoadingView
                android:id="@+id/loadView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>-->
    </LinearLayout>
</layout>