<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/color_main">


            <TextView
                style="@style/title_text_style"
                android:layout_centerInParent="true"
                android:text="@string/confirm_payment" />


            <ImageView
                android:id="@+id/ivClosePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="13dp"
                android:src="@drawable/shutdown" />


        </RelativeLayout>


        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:drawablePadding="16dp"
            android:drawableTop="@drawable/status_success"
            android:gravity="center"
            android:text="@string/payment_success"
            android:textColor="@color/color_29c426"
            android:textSize="15sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="29dp"
            android:background="@color/color_side_line" />


        <LinearLayout
            android:id="@+id/llCenterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <!--退款金额-->
            <LinearLayout
                android:id="@+id/llRefundLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:visibility="gone">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/refund_amount"
                    android:textColor="@color/color_666666"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tvRefund"
                    style="@style/my_trips_text_style"
                    android:text="+₱ 10"
                    android:textColor="@color/color_fe4a3b"
                    android:textSize="19sp" />


            </LinearLayout>


            <!--余额、违约金-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="13dp"
                android:paddingRight="13dp">

                <TextView
                    android:id="@+id/tvCenterName"
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/your_wallet_balance"
                    android:textColor="@color/color_666666"
                    android:textSize="15sp" />


                <!--<TextView
                    style="@style/my_trips_text_style"
                    android:textColor="@color/color_main"
                    android:text=""
                    android:textSize="19sp" />
-->

                <TextView
                    android:id="@+id/tvBalance"
                    style="@style/my_trips_text_style"
                    android:text="₱ 10"
                    android:textColor="@color/color_000000"
                    android:textSize="19sp" />


            </LinearLayout>
        </LinearLayout>


        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="29dp"
            android:background="@color/color_side_line" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnComplete"
                style="@style/button_style"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/main_stroke_bg"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/complete"
                android:textColor="@color/color_main" />

            <Button
                android:id="@+id/btnViewOrder"
                style="@style/button_style"
                android:layout_width="160dp"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/main_solid_bg"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/view_order" />

        </LinearLayout>

    </LinearLayout>
</layout>