<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f1f1f4"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/color_000000"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tvBillAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/color_fe4a3b"
                    android:textSize="25sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_side_line"/>



            <!--items-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/items"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tvItems"
                    style="@style/my_trips_text_style"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/order_number"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tvOrderNum"
                    style="@style/my_trips_text_style"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/status"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tvStatus"
                    style="@style/my_trips_text_style"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/payment_method"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tvPaymentMethod"
                    style="@style/my_trips_text_style"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_trips_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/time"
                    android:textColor="@color/color_666666"
                    android:textSize="13sp" />


                <TextView
                    android:id="@+id/tvTime"
                    style="@style/my_trips_text_style"
                    android:layout_marginLeft="7dp"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>
</layout>